# lightup

./: CMakeLists.txt  Doxyfile  README.md  game.c  game_examples.c  game_private.c  game_random.c  game_random.h  game_solve.c  game_test.c  game_test.h  game_test_aux.c  game_test_v1.c  game_test_v2.c  game_text.c  game_tools.c  game_tools.h  game_tools_test.c  game_visuals.c  queue.c  visuals.c  visuals.h
android/: AndroidManifest.xml
android/jni/src/: Android.mk
jeu/: 3x3.txt  4x4.txt  5x3w.txt  8x8_v1.txt
